add users routers to swagger
